deployments/kustomize/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: goathena
  labels:
    app.kubernetes.io/name: goathena
    app.kubernetes.io/part-of: goathena
