deployments/kustomize/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: goathena
spec:
  selector:
    app.kubernetes.io/name: goathena
  ports:
    - name: http
      port: 8080
      targetPort: 8080
    - name: grpc
      port: 50051
      targetPort: 50051
  type: ClusterIP
